# Conformal-Feedback-Alignment

./: .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
AI Feedback/: obtain_uncertainty_data.py
Generation With CP/: run_cp.py  run_generation.py
Quick Start/: AI_response_evaluation.py  customize_dpo.py  dpo_ours_train.py  evaluation_scores_RLUF.pkl  evaluation_scores_baseDPO.pkl  read_evaluation.py  sft.py  test_dict_RLUF.pkl  test_dict_baseDPO.pkl  test_dict_question.pkl
Training and Testing/: dpo_ours_train.py
cfa/: __init__.py  __main__.py  cli.py  config.py
cfa/models/: weighted_dpo.py
cfa/stages/: calibration.py  evaluation.py  feedback.py  generation.py  inference.py  sft.py  train.py  weights.py
cfa/utils/: io.py  pairwise_annotator.py  scoring.py  text_processing.py
configs/: default.yaml  mwe.yaml
tests/: test_config.py  test_io.py  test_scoring.py  test_text_processing.py
